<resources>

    <!--LOGIN-->

    <string name="app_name">BarEat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_home">Home</string>
    <string name="section_search">Buscar</string>
    <string name="section_profile">Perfil</string>
    <string name="done_button">Siguiente</string>
    <string name="cancel_button">Cancelar</string>
    <string name="popularity">Más popular</string>
    <string name="rated">Mejor valorado</string>
    <string name="alphabetically">Orden alfabético</string>
    <string name="nothing">Quitar filtro</string>
    <string name="restaurants">Restaurantes</string>
    <string name="bar">Bares</string>
    <string name="cafes">Cafeterías</string>
    <string name="enter">Entrar</string>
    <string name="register">Regístrate</string>
    <string name="personal_data">Datos personales</string>
    <string name="password">Contraseña*</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="email">Email*</string>
    <string name="next">Siguiente</string>
    <string name="conditions">Acepto los términos y condiciones de uso</string>
    <string name="forgot">¿Olvidaste la contraseña?</string>
    <string name="complete_profile">Complete su perfil</string>
    <string name="name">Nombre*</string>
    <string name="surname">Apellidos*</string>
    <string name="phone">Teléfono</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="finish">Finalizar</string>
    <string name="add">Publicidad</string>
    <string name="error_fields_empty">Debes rellenar todos los campos.</string>
    <string name="error_tyc">Debes aceptar los términos y condiciones.</string>
    <string name="error_pass_not_valid">La contraseña debe tener más de 6 caracteres</string>
    <string name="error_email">Tienes que introducir un email correcto</string>
    <string name="error_pass_not_same">Las contraseña no coincide en ambos campos</string>
    <string name="error_phone_not_valid">El teléfono no es válido</string>


    <!--MAIN SCREEN-->
    <string name="search_hint">Nombre del restaurante</string>
    <string name="profile_book">Mis reservas</string>
    <string name="profile_review_restaurant">Reseñas de restaurantes</string>
    <string name="profile_review_dish">Reseñas de platos</string>
    <string name="see_all_f">Ver todas</string>
    <string name="see_all_m">Ver todos</string>
    <string name="tel_btn">Teléfono</string>
    <string name="address">Dirección: </string>
    <string name="email_btn">Email</string>
    <string name="dishes">Platos</string>
    <string name="reviews">Reseñas</string>
    <string name="book">Reservar</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="book_number">Número de comensales</string>
    <string name="price">%1$.2f€</string>
    <string name="score">%1$.2f / 5</string>
    <string name="send">Enviar</string>
    <string name="close">Cerrar</string>
    <string name="comment">Comentario</string>
    <string name="empty_comments">No hay reseñas</string>
    <string name="empty_list">No hay resultados</string>
    <string name="empty_book">No tienes ninguna reserva</string>
    <string name="empty_review">No tienes ninguna reseña</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="logout_subtitle">¿Estás seguro de que quieres cerrar sesión?</string>

</resources>