<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_nothing"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/nothing"
                android:title="@string/nothing" />

            <item
                android:id="@+id/bar"
                android:title="@string/bar" />

            <item
                android:id="@+id/restaurant"
                android:title="@string/restaurants" />

            <item
                android:id="@+id/cafe"
                android:title="@string/cafes" />

        </menu>
    </item>

</menu>